--- a/P004598.opf/meta.yml
+++ b/P004598.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004598
+id: P004598
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG3710
   title: དགའ་ལྡན་ཕྱག་རྒྱ་ཆེན་པོ་དང་ཟབ་ལམ་བླ་མའི་རྣལ་འབྱོར་བཟུང་འབྲེལ་གྱི་ཟིན་བྲིས་སྙན་རྒྱུད་མན་ངག་ཟབ་གསལ་
-  volume: ''
   author: ''
+  volumes: {}
