--- a/P004598.opf/layers/v001/Pagination.yml
+++ b/P004598.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2fef21397c254a0282dc2266ed8c969f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   9d515b89d7e5415b91d1b693d782c54a:
