--- a/P004598.opf/meta.yml
+++ b/P004598.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004598
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG3710
   title: དགའ་ལྡན་ཕྱག་རྒྱ་ཆེན་པོ་དང་ཟབ་ལམ་བླ་མའི་རྣལ་འབྱོར་བཟུང་འབྲེལ་གྱི་ཟིན་བྲིས་སྙན་རྒྱུད་མན་ངག་ཟབ་གསལ་
